added documentation to importBoundariesAndStations

--- a/src/WeatherStation/CombineProvinceData.ipynb
+++ b/src/WeatherStation/CombineProvinceData.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# combineProvinceData.ipynb\n",
-    "After loading the [daily weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly), [hourly weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_hly), [daily weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data) and the [hourly weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data) the following class can be used to calculate the minimum, mean and maximum of all attributes per district\n",
+    "After loading the [daily weather stations, hourly weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_hly), [daily weather station data]() and the [hourly weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data) the following class can be used to calculate the minimum, mean and maximum of all attributes per district\n",
     "\n",
     "##### Output:\n",
     "- [agg_weather_combined](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_weather_combined)"
