only the PullSoilMoisture documentation left

--- a/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# soilMoistureVisualization.ipynb\n",
+    "After [aggregating the soil moisture data]() the following script can be used to visualize the data\n",
+    "\n",
+    "##### Output graphs:\n",
+    "- Correlation plot\n",
+    "- Pair plot\n",
+    "- Histograms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,12 +37,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "# table that holds the aggregated soil moisture data\n",
+    "MOISTURE_TABLE = \"agg_soil_moisture\"\n",
+    "ERGOT_TABLE = \"agg_ergot_sample\"  # table that holds the aggregated ergot data\n",
+    "\n",
+    "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
     "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Connect to the database"
    ]
   },
   {
@@ -52,14 +79,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ergotQuery = sq.text(\"SELECT * FROM agg_ergot_samples;\")\n",
+    "Purpose:  \n",
+    "Load the ergot and soil moisture data from the database\n",
     "\n",
-    "ergotDF = pd.read_sql_query(ergotQuery, conn)"
+    "Pseudocode:  \n",
+    "- Create the ergot SQL query\n",
+    "- Create the soil moisture SQL query\n",
+    "- [Load both from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- Close the connection to the database"
    ]
   },
   {
@@ -68,11 +98,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ergotQuery = sq.text(f\"SELECT * FROM {ERGOT_TABLE};\")\n",
     "moistureQuery = sq.text(\n",
-    "    \"SELECT soil_moisture_min, soil_moisture_max, soil_moisture_mean, year, district FROM agg_soil_moisture;\"\n",
+    "    f\"SELECT soil_moisture_min, soil_moisture_max, soil_moisture_mean, year, district FROM {MOISTURE_TABLE};\"\n",
     ")\n",
     "\n",
-    "moistureDF = pd.read_sql_query(moistureQuery, conn)"
+    "ergotDF = pd.read_sql_query(ergotQuery, conn)\n",
+    "moistureDF = pd.read_sql_query(moistureQuery, conn)\n",
+    "\n",
+    "db.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Create individual copies of the soil moisture dataframe for each province\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- [Create the Alberta soil moisture DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.loc.html)\n",
+    "- [Create the Manitoba soil moisture DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.loc.html)\n",
+    "- [Create the Saskatchewan soil moisture DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.loc.html)"
    ]
   },
   {
@@ -82,10 +129,23 @@
    "outputs": [],
    "source": [
     "ab_df = moistureDF.loc[moistureDF[\"district\"] >= 4800]\n",
+    "mb_df = moistureDF.loc[moistureDF[\"district\"] < 4700]\n",
+    "\n",
     "sk_df = moistureDF.loc[\n",
     "    (moistureDF[\"district\"] >= 4700) | (moistureDF[\"district\"] < 4800)\n",
-    "]\n",
-    "mb_df = moistureDF.loc[moistureDF[\"district\"] < 4700]"
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Joins the ergot and moisture data into a single DataFrame\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- [Joins the ergot and moisture data into a single DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.merge.html) (based on year and district)\n",
+    "- [Drop irrelevant columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)\n"
    ]
   },
   {
@@ -94,7 +154,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.cleanup()"
+    "final_df = moistureDF.merge(ergotDF, on=[\"year\", \"district\"])\n",
+    "final_df.drop(columns=[\"year\", \"district\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Create the correlation matrix between attributes\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- [Create the correlation matrix between attributes](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)"
    ]
   },
   {
@@ -103,35 +175,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = moistureDF.merge(ergotDF, on=[\"year\", \"district\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df.drop(columns=[\"district\", \"year\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute the correlation matrix\n",
     "corr = final_df.corr()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "corr"
+    "Purpose:  \n",
+    "Create a correlation plot between houly weather station data and ergot\n",
+    "\n",
+    "Note: this code is boilerplate, therefore additional information can be found [here](https://seaborn.pydata.org/examples/many_pairwise_correlations.html)"
    ]
   },
   {
@@ -166,6 +220,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Create pairplots between the more interesting relationships between soil and ergot\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- [Create the pairplots](https://seaborn.pydata.org/generated/seaborn.pairplot.html) (attributes of interest are selected from the DataFrame as a list)\n",
+    "- [Generate the pairplots](https://seaborn.pydata.org/generated/seaborn.objects.Plot.show.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -176,13 +242,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Create side by side histograms containing the minimum, mean and maximum values\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- [Create 3 subplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplots.html)\n",
+    "- [Assign a figure title](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.suptitle.html)\n",
+    "- [Plot groups of histograms](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html) (minimum, mean and maximum values) for all provinces of interest\n",
+    "- [Add a legend](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.legend.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
-    "fig.suptitle(\"Soil Moisture (m^3/m^3)\")\n",
+    "fig.suptitle(\"Soil Moisture (<2cm thickness in %)\")\n",
     "\n",
     "\n",
     "ax1.hist(sk_df[\"soil_moisture_min\"], alpha=0.5, label=\"sk\")\n",
