Soil Moisture Documentation (#114)

--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -1,22 +1,134 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PullMoistureData.ipynb\n",
+    "After [agriculture regions have been loaded](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/importBoundariesAndStations.ipynb) and the soil moisture files have been downloaded, this script will load satellite soil moisture data into the database\n",
+    "\n",
+    "##### Required files: \n",
+    "- [soil moisture data](https://www.esa.int/Applications/Observing_the_Earth/Space_for_our_climate/Nearly_four_decades_of_soil_moisture_data_now_available)\n",
+    "\n",
+    "##### Output:\n",
+    "- [soil_moisture](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_moisture)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import xarray as xr  # type: ignore\n",
-    "import geopandas as gpd  # type: ignore\n",
     "from dotenv import load_dotenv\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import xarray as xr  # type: ignore\n",
     "import sqlalchemy as sq\n",
-    "import sys\n",
-    "\n",
+    "import pandas as pd\n",
+    "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService\n",
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TABLE = \"soil_moisture\"  # The table used to store the moisture data\n",
+    "AG_REGIONS_TABLE = \"census_ag_regions\"  # The table that holds the agriculture regions\n",
+    "\n",
+    "MAIN_FOLDER_PATH = \"data/common/Images/\"  # Main folder that contains the moisture files\n",
+    "LOG_FILE = \"data/pull_moisture.log\"  # The file used to store progress information\n",
+    "ERROR_FILE = \"data/pull_moisture.err\"  # The file used to store ERROR information\n",
+    "\n",
+    "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
+    "load_dotenv(\"../docker/.env\")\n",
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        updateLog(LOG_FILE, \"Missing database credentials\")\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "\n",
+    "    # Check if the soil moisture table exists, if not create it\n",
+    "    queryHandler = SoilMoistureQueryHandler()\n",
+    "    queryHandler.createSoilMoistureTableReq(db)\n",
+    "\n",
+    "    # Load the agriculture regions\n",
+    "    agRegions = loadGeometry(conn)\n",
+    "    folders = os.listdir(MAIN_FOLDER_PATH)\n",
+    "\n",
+    "    numErrors = 0  # Used to keep track of how many files are added to the database\n",
+    "\n",
+    "    for folder in folders:\n",
+    "        try:\n",
+    "            folderPath = os.path.join(MAIN_FOLDER_PATH, folder)\n",
+    "            updateLog(LOG_FILE, f\"Started Updating data for {folder} in {TABLE} ...\")\n",
+    "\n",
+    "            fileList = get_nc_file_list(folderPath)\n",
+    "\n",
+    "            for file in fileList:\n",
+    "                # Construct the full file path to get the netCDF files\n",
+    "                filePath = os.path.join(folderPath, file)\n",
+    "\n",
+    "                # Process then store the moisture data\n",
+    "                df = readNetCDF(filePath)\n",
+    "                df = formatData(df)\n",
+    "                df = addRegions(df, agRegions)\n",
+    "                df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            numErrors += 1\n",
+    "            updateLog(\n",
+    "                ERROR_FILE,\n",
+    "                f\"\"\"\n",
+    "                [Error] occurred while listing files in the main folder path: {MAIN_FOLDER_PATH}\n",
+    "                {e}\n",
+    "                \"\"\",\n",
+    "            )\n",
+    "\n",
+    "    updateLog(\n",
+    "        LOG_FILE,\n",
+    "        f\"[SUCCESS] loaded {len(folder_names) - numErrors}/{len(folder_names)} data from {folder_name} into {TABLE}\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Outputs progress updates to log files and to the console\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- Check if a filename is provided\n",
+    "- Opens the file and adds the progress message\n",
+    "- Print the message to the console"
    ]
   },
   {
@@ -31,7 +143,21 @@
     "            with open(fileName, \"a\") as log:\n",
     "                log.write(message + \"\\n\")\n",
     "    except Exception as e:\n",
-    "        print(message)"
+    "        pass\n",
+    "\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Retrieves a list of netCDF files from a folder\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- [Get a list of files in the folder](https://www.geeksforgeeks.org/python-os-listdir-method/)\n",
+    "- Pick only the files that end with .nc "
    ]
   },
   {
@@ -40,26 +166,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nc_file_list(folder_path):\n",
-    "    # Get a list of all files in the folder\n",
-    "    file_list = os.listdir(folder_path)\n",
-    "    # Filter the file list to include only NetCDF files\n",
+    "def get_nc_file_list(folder_path: str) -> list:\n",
+    "    file_list = os.listdir(folder_path)  # Get a list of files in the folder\n",
     "    nc_file_list = [filename for filename in file_list if filename.endswith(\".nc\")]\n",
+    "\n",
     "    return nc_file_list"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_agriculture_regions(conn):\n",
-    "    query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
-    "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
-    "        query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
-    "    )\n",
-    "    return agRegions"
+    "Purpose:  \n",
+    "Load the [regions](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#census_ag_regions) from the database\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- Create the region SQL query\n",
+    "- [Load the regions directly into a GeoDataFrame](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.from_postgis.html)\n",
+    "    - crs sets the coordinate system, in our case we want EPSG:3347\n",
+    "    - geom_col specifies which column holds the geometry/boundaries"
    ]
   },
   {
@@ -68,13 +193,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_netcdf_file(netcdf_file_path, conn, agRegions, TABLE):\n",
-    "    dataset = xr.open_dataset(netcdf_file_path)\n",
-    "    df = (\n",
-    "        dataset.to_dataframe().reset_index()\n",
-    "    )  # Converts the contents into a dataframe and corrects indexes\n",
-    "    dataset.close()\n",
+    "def loadGeometry(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
+    "    query = sq.text(f\"select cr_num, district, geometry FROM public.{AG_REGIONS_TABLE}\")\n",
     "\n",
+    "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "        query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    )\n",
+    "\n",
+    "    return agRegions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Reads a netCDF file\n",
+    "\n",
+    "Pseudocode:  \n",
+    "- [Open the file](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html)\n",
+    "- [Convert its contents into a DataFrame](https://docs.xarray.dev/en/latest/generated/xarray.DataArray.to_dataframe.html)\n",
+    "- Close the file\n",
+    "- If an error is encountered, log it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def readNetCDF(file: str) -> pd.DataFrame:\n",
+    "    try:\n",
+    "        dataset = xr.open_dataset(file)\n",
+    "        df = dataset.to_dataframe().reset_index()\n",
+    "        dataset.close()\n",
+    "    except Exception as e:\n",
+    "        updateLog(ERROR_FILE, f\"Error reading netCDF file {e}\\n\")\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Prepares the DataFrame for future processing\n",
+    "\n",
+    "Preprocessing:  \n",
+    "- [Drop irrelevant columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)\n",
+    "- Drop irrelevant data\n",
+    "- [Rename DataFrame columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formatData(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    df.drop(\n",
     "        columns=[\n",
     "            \"flag\",\n",
@@ -87,32 +266,57 @@
     "        ],\n",
     "        inplace=True,\n",
     "    )\n",
-    "    df.rename(columns={df.columns[0]: \"date\"}, inplace=True)\n",
-    "    df.rename(columns={df.columns[3]: \"soil_moisture\"}, inplace=True)\n",
+    "\n",
     "    df = df[df[\"soil_moisture\"].notna()]\n",
     "\n",
+    "    df.rename(columns={df.columns[0]: \"date\"}, inplace=True)\n",
+    "    df.rename(columns={df.columns[3]: \"soil_moisture\"}, inplace=True)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Labels the soil moisture data with the agriculture region districts\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- [Create geometry for each set of longitude/latitude](https://geopandas.org/en/stable/docs/reference/api/geopandas.points_from_xy.html) for the data found in the soil moisture data\n",
+    "- [Set the coordinate system](https://geopandas.org/en/stable/docs/reference/api/geopandas.GeoDataFrame.to_crs.html) to the same one used throughout the codebase (EPSG:3347)\n",
+    "- Label the data to the regions [by joining them together](https://geopandas.org/en/stable/docs/reference/api/geopandas.sjoin.html)\n",
+    "    - how=left specifies that the Copernicus data is always kept even if it does not fall within a region\n",
+    "    - predicate=within joins the data based on which rows of Copernicus data fall into what regions\n",
+    "- [Drop irrelevant columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)\n",
+    "- [Drop irregular data](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.notna.html)\n",
+    "- [Cast cr_num to an integer](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addRegions(df: pd.DataFrame, agRegions: gpd.GeoDataFrame) -> pd.DataFrame:\n",
+    "    # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
     "    df = gpd.GeoDataFrame(\n",
     "        df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)\n",
-    "    )  # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
+    "    )\n",
     "\n",
-    "    df = df.to_crs(  # type: ignore\n",
-    "        crs=\"EPSG:3347\"\n",
-    "    )  # Changes the points projection to match the agriculture regions of EPSG:3347\n",
+    "    # Changes the points projection to match the agriculture regions of EPSG:3347\n",
+    "    df.to_crs(crs=\"EPSG:3347\", inplace=True)  # type: ignore\n",
     "\n",
-    "    df = gpd.sjoin(\n",
-    "        df, agRegions, how=\"left\", predicate=\"within\"\n",
-    "    )  # Join the two dataframes based on which points fit within what agriculture regions\n",
+    "    # Join the two dataframes based on which points fit within what agriculture regions\n",
+    "    df = gpd.sjoin(df, agRegions, how=\"left\", predicate=\"within\")\n",
     "\n",
-    "    df.drop(columns=[\"index_right\", \"geometry\"], inplace=True)\n",
+    "    df = pd.DataFrame(df.drop(columns=[\"index_right\", \"geometry\"]))\n",
     "\n",
     "    df = df[df[\"cr_num\"].notna()]  # Take rows that are valid numbers\n",
-    "\n",
     "    df[[\"cr_num\"]] = df[[\"cr_num\"]].astype(int)\n",
-    "    df = df.reset_index()\n",
     "\n",
-    "    df.drop(columns=[\"index\"], inplace=True)\n",
-    "\n",
-    "    df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)"
+    "    return df"
    ]
   },
   {
@@ -121,89 +325,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    # path to soil moister data\n",
-    "    MAIN_FOLDER_PATH = \"/data/common/Images/\"\n",
-    "    LOG_FILE = \"/data/pull_moisture.log\"\n",
-    "    ERROR_FILE = \"/data/pull_moisture.err\"\n",
-    "\n",
-    "    # loading environment variables\n",
-    "    load_dotenv()\n",
-    "    PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "    PG_PW = os.getenv(\"POSTGRES_PW\")\n",
-    "    PG_DB = os.getenv(\"POSTGRES_DB\")\n",
-    "    PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "    PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
-    "\n",
-    "    if (\n",
-    "        PG_DB is None\n",
-    "        or PG_ADDR is None\n",
-    "        or PG_PORT is None\n",
-    "        or PG_USER is None\n",
-    "        or PG_PW is None\n",
-    "    ):\n",
-    "        updateLog(LOG_FILE, \"Missing database credentials\")\n",
-    "        raise ValueError(\"Environment variables not set\")\n",
-    "\n",
-    "    TABLE = \"soil_moisture\"\n",
-    "\n",
-    "    queryHandler = SoilMoistureQueryHandler()\n",
-    "\n",
-    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "    conn = db.connect()\n",
-    "\n",
-    "    queryHandler.createSoilMoistureTableReq(db)\n",
-    "\n",
-    "    agRegions = get_agriculture_regions(conn)\n",
-    "\n",
-    "    try:\n",
-    "        folder_names = os.listdir(MAIN_FOLDER_PATH)\n",
-    "    except OSError as e:\n",
-    "        updateLog(\n",
-    "            ERROR_FILE,\n",
-    "            f\"\\t\\tError occurred while listing files in the main folder path: {MAIN_FOLDER_PATH}\",\n",
-    "        )\n",
-    "        updateLog(ERROR_FILE, str(e))\n",
-    "        return\n",
-    "\n",
-    "    for folder_name in folder_names:\n",
-    "        print(\"started : \" + folder_name)\n",
-    "        updateLog(LOG_FILE, f\"Started Updating data for {folder_name} in {TABLE} ...\")\n",
-    "        folder_path = os.path.join(MAIN_FOLDER_PATH, folder_name)\n",
-    "\n",
-    "        nc_file_list = get_nc_file_list(folder_path)\n",
-    "\n",
-    "        try:\n",
-    "            for nc_file in nc_file_list:\n",
-    "                # Construct the full file path\n",
-    "                netcdf_file_path = os.path.join(folder_path, nc_file)\n",
-    "                process_netcdf_file(netcdf_file_path, conn, agRegions, TABLE)\n",
-    "\n",
-    "        except FileNotFoundError as e:\n",
-    "            updateLog(\n",
-    "                ERROR_FILE,\n",
-    "                f\"\\t\\tError occurred while listing files in the NC files: {nc_file}\",\n",
-    "            )\n",
-    "            updateLog(ERROR_FILE, f\"\\t\\t{e}\")\n",
-    "\n",
-    "        updateLog(LOG_FILE, f\"Ended Updating data for {folder_name} in {TABLE} ...\")"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -222,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
