changed the name of file

--- a/src/Ergot/ergotVisualization.ipynb
+++ b/src/Ergot/ergotVisualization.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ergotVisualization.ipynb\n",
+    "\n",
+    "Visualisation for [ergot_sample](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#ergot_sample) and [agg_ergot_sample](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_ergot_sample), The following script can be used to visualize the data\n",
+    "\n",
+    "## Output graphs:\n",
+    "\n",
+    "- Correlation plot ([such as ...](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/.github/img/ergotCorr.png))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -535,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
