--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -19,19 +19,19 @@
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import pickle\n",
-    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
-    "from sklearn.ensemble import (\n",
+    "from imblearn.combine import SMOTEENN, SMOTETomek # type: ignore\n",
+    "from sklearn.ensemble import ( # type: ignore\n",
     "    RandomForestClassifier,\n",
     "    GradientBoostingClassifier,\n",
     ")\n",
-    "from imblearn.ensemble import (\n",
+    "from imblearn.ensemble import ( # type: ignore\n",
     "    BalancedBaggingClassifier,\n",
     "    BalancedRandomForestClassifier,\n",
     "    EasyEnsembleClassifier,\n",
     "    RUSBoostClassifier,\n",
     ")\n",
     "\n",
-    "from sklearn.metrics import (\n",
+    "from sklearn.metrics import ( # type: ignore\n",
     "    accuracy_score,\n",
     "    precision_score,\n",
     "    recall_score,\n",
@@ -40,8 +40,7 @@
     "    classification_report\n",
     ")\n",
     "\n",
-    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
-    "from Models.models_ensemble import getBalancedClassifier, getClassifier"
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
