--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -19,25 +19,25 @@
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import pickle\n",
-    "from imblearn.combine import SMOTEENN, SMOTETomek # type: ignore\n",
-    "from sklearn.ensemble import ( # type: ignore\n",
+    "from imblearn.combine import SMOTEENN, SMOTETomek  # type: ignore\n",
+    "from sklearn.ensemble import (  # type: ignore\n",
     "    RandomForestClassifier,\n",
     "    GradientBoostingClassifier,\n",
     ")\n",
-    "from imblearn.ensemble import ( # type: ignore\n",
+    "from imblearn.ensemble import (  # type: ignore\n",
     "    BalancedBaggingClassifier,\n",
     "    BalancedRandomForestClassifier,\n",
     "    EasyEnsembleClassifier,\n",
     "    RUSBoostClassifier,\n",
     ")\n",
     "\n",
-    "from sklearn.metrics import ( # type: ignore\n",
+    "from sklearn.metrics import (  # type: ignore\n",
     "    accuracy_score,\n",
     "    precision_score,\n",
     "    recall_score,\n",
     "    f1_score,\n",
     "    roc_auc_score,\n",
-    "    classification_report\n",
+    "    classification_report,\n",
     ")\n",
     "\n",
     "from ModelBuilderMethods import getConn, extractYears"
