--- a/src/Models/Boost/Boost.ipynb
+++ b/src/Models/Boost/Boost.ipynb
@@ -22,14 +22,14 @@
     "import pickle\n",
     "from imblearn.combine import SMOTEENN, SMOTETomek\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.ensemble import (\n",
+    "from sklearn.ensemble import (  # type: ignore\n",
     "    GradientBoostingClassifier,\n",
     ")\n",
-    "from imblearn.ensemble import (\n",
+    "from imblearn.ensemble import (  # type: ignore\n",
     "    RUSBoostClassifier,\n",
     ")\n",
     "\n",
-    "from sklearn.metrics import (\n",
+    "from sklearn.metrics import (  # type: ignore\n",
     "    accuracy_score,\n",
     "    precision_score,\n",
     "    recall_score,\n",
