--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import pickle\n",
+    "import jupyter_black as bl  # type: ignore\n",
     "from imblearn.combine import SMOTEENN, SMOTETomek  # type: ignore\n",
     "from sklearn.ensemble import (  # type: ignore\n",
     "    RandomForestClassifier,\n",
@@ -40,18 +41,46 @@
     "    classification_report,\n",
     ")\n",
     "\n",
-    "from ModelBuilderMethods import getConn, extractYears"
+    "from ModelBuilderMethods import getConn, extractYears\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# unlimited line output\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', 500)"
+    "pd.set_option(\"display.max_rows\", 500)\n",
+    "bl.load()"
    ]
   },
   {
@@ -68,24 +97,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherStationQuery = sq.text(\"\"\"\n",
+    "weatherStationQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "weatherSatQuery = sq.text(\"\"\"\n",
+    "weatherSatQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotPrevYearsAggQuery = sq.text(\"\"\"\n",
+    "ergotPrevYearsAggQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, \n",
     "    present_prev1, present_prev2, present_prev3,\n",
     "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
     "    from agg_ergot_sample_v2\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotTargetQuery = sq.text(\"\"\"\n",
+    "ergotTargetQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, downgrade from ergot_sample_feat_eng\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")\n"
    ]
   },
   {
@@ -102,7 +139,7 @@
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
     "conn.close()\n",
-    "del conn"
+    "del conn\n"
    ]
   },
   {
@@ -121,7 +158,7 @@
     "# merge on year and district\n",
     "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
-    "del tempdf"
+    "del tempdf\n"
    ]
   },
   {
@@ -137,7 +174,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
@@ -165,7 +201,7 @@
     "# train 1995 - 2015 test 2016 - 2020\n",
     "trainDf = extractYears(datasetDf, 1995, 2015)\n",
     "testDf = extractYears(datasetDf, 2016, 2020)\n",
-    "del datasetDf"
+    "del datasetDf\n"
    ]
   },
   {
@@ -176,7 +212,7 @@
    "source": [
     "# drop year\n",
     "trainDf = trainDf.drop(columns=[\"year\"])\n",
-    "testDf = testDf.drop(columns=[\"year\"])\n"
+    "testDf = testDf.drop(columns=[\"year\"])"
    ]
   },
   {
@@ -197,7 +233,7 @@
     "# pre balancing check\n",
     "# print value counts downgrade\n",
     "print(trainDf[\"downgrade\"].value_counts())\n",
-    "print(testDf[\"downgrade\"].value_counts())"
+    "print(testDf[\"downgrade\"].value_counts())\n"
    ]
   },
   {
@@ -209,7 +245,7 @@
     "# count nan\n",
     "print(trainDf.isna().sum())\n",
     "# set nan to 0\n",
-    "trainDf = trainDf.fillna(0)"
+    "trainDf = trainDf.fillna(0)\n"
    ]
   },
   {
@@ -219,7 +255,9 @@
    "outputs": [],
    "source": [
     "balancer = SMOTEENN(sampling_strategy=0.8, random_state=42)\n",
-    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])"
+    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(\n",
+    "    trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"]\n",
+    ")"
    ]
   },
   {
@@ -230,7 +268,7 @@
    "source": [
     "# post balancing check\n",
     "# print value counts downgrade\n",
-    "print(balancedTrainDfY.value_counts())"
+    "print(balancedTrainDfY.value_counts())\n"
    ]
   },
   {
@@ -256,7 +294,7 @@
    "outputs": [],
    "source": [
     "# df = pd.DataFrame()\n",
-    "# scaled = scaleColumns(df, ['max_temp'], None, 1)"
+    "# scaled = scaleColumns(df, ['max_temp'], None, 1)\n"
    ]
   },
   {
@@ -273,7 +311,7 @@
     "    print(\"F1: \", f1_score(y_true, y_pred))\n",
     "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
     "    print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
@@ -327,7 +365,7 @@
     "    n_jobs=CORES,\n",
     "    min_samples_split=MINSPLSPLIT,\n",
     "    min_samples_leaf=MINSAMPLELEAF,\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -339,7 +377,7 @@
     "model_rf.fit(balancedTrainDfX, balancedTrainDfY)\n",
     "model_nobalance_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "balanced_model_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
-    "balanced_model_balanced_rf.fit(balancedTrainDfX, balancedTrainDfY)"
+    "balanced_model_balanced_rf.fit(balancedTrainDfX, balancedTrainDfY)\n"
    ]
   },
   {
@@ -357,7 +395,7 @@
    "outputs": [],
    "source": [
     "# set nan to 0\n",
-    "testDf = testDf.fillna(0)"
+    "testDf = testDf.fillna(0)\n"
    ]
   },
   {
@@ -366,12 +404,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# get predictions\n",
     "predictions = model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_nobalance = model_nobalance_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_balanced = balanced_model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(testDf.drop(columns=\"downgrade\"))\n"
+    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")"
    ]
   },
   {
@@ -383,7 +422,7 @@
     "print(pd.DataFrame(predictions).value_counts())\n",
     "print(pd.DataFrame(predictions_nobalance).value_counts())\n",
     "print(pd.DataFrame(predictions_balanced).value_counts())\n",
-    "print(pd.DataFrame(predictions_balanced_balanced).value_counts())\n"
+    "print(pd.DataFrame(predictions_balanced_balanced).value_counts())"
    ]
   },
   {
@@ -400,12 +439,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "printMetrics(\"sk RF balanced train set\", testDf[\"downgrade\"], predictions)\n",
     "printMetrics(\"sk RF imbalanced train set\", testDf[\"downgrade\"], predictions_nobalance)\n",
     "printMetrics(\"imb RF imbalanced train set\", testDf[\"downgrade\"], predictions_balanced)\n",
-    "printMetrics(\"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced)\n",
-    "\n"
+    "printMetrics(\n",
+    "    \"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced\n",
+    ")"
    ]
   }
  ],
